--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
-
-    <ImageView
-        android:id="@+id/image_clothes"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/textview_day"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        tools:src="@drawable/baseline_cloud_24"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="100dp"
+        android:foregroundGravity="fill"
+        android:layout_margin="20dp"
+        app:cardElevation="8dp"
+        app:cardCornerRadius="0.2in"
+        >
+
+        <TextView
+            android:id="@+id/textview_temp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="44.27"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="44sp"
+            android:textColor="@color/black"
+            />
+
+
+
+
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:cardCornerRadius="0.2in"
+        app:layout_constraintTop_toBottomOf="@id/textview_day"
+        android:layout_margin="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:foregroundGravity="fill"
+        app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@id/add_clothes"
+        >
+        <ImageView
+            android:id="@+id/image_clothes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:src="@drawable/summer1"
+            android:scaleType="fitXY"
+            />
+    </androidx.cardview.widget.CardView>
+    <Button
+        android:id="@+id/add_clothes"
+        android:layout_width="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Add Clothes"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
