--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,78 @@
         app:cardElevation="8dp"
         app:cardCornerRadius="0.2in"
         >
-
-        <TextView
-            android:id="@+id/textview_temp"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="44.27"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textSize="44sp"
-            android:textColor="@color/black"
-            />
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/textview_today"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/textview_temp"
+                tools:text="Sunday "
+                android:gravity="center"
+                app:layout_constraintBottom_toTopOf="@id/textview_date"
+                android:textSize="40sp"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textview_date"
+                app:layout_constraintStart_toStartOf="@id/textview_today"
+                app:layout_constraintTop_toBottomOf="@id/textview_today"
+                tools:text="10/04/2023"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/textview_description"
+                />
+            <TextView
+                app:layout_constraintStart_toEndOf="@id/textview_today"
+                android:id="@+id/textview_temp"
+                android:layout_width="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_height="wrap_content"
+                tools:text="44"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                app:layout_constraintBottom_toTopOf="@id/textview_description"
+                android:textSize="32sp"
+                android:textColor="@color/black"
+                />
+
+            <TextView
+                android:id="@+id/textview_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/textview_date"
+                app:layout_constraintTop_toBottomOf="@id/textview_temp"
+
+                tools:text="cleaned cloud " />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@id/textview_temp"
+                app:layout_constraintBottom_toTopOf="@id/textview_temp"
+                android:text="O"
+                android:textSize="22sp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/black"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
