--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,128 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/textview_day"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textview_today"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toStartOf="@id/textview_temp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="100dp"
-        android:foregroundGravity="fill"
-        android:layout_margin="20dp"
-        app:cardElevation="8dp"
-        app:cardCornerRadius="0.2in"
-        >
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/textview_today"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/textview_temp"
-                tools:text="Sunday "
-                android:gravity="center"
-                app:layout_constraintBottom_toTopOf="@id/textview_date"
-                android:textSize="40sp"
-                android:textColor="@color/black"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textview_date"
-                app:layout_constraintStart_toStartOf="@id/textview_today"
-                app:layout_constraintTop_toBottomOf="@id/textview_today"
-                tools:text="10/04/2023"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/textview_description"
-                />
-            <TextView
-                app:layout_constraintStart_toEndOf="@id/textview_today"
-                android:id="@+id/textview_temp"
-                android:layout_width="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_height="wrap_content"
-                tools:text="44"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                app:layout_constraintBottom_toTopOf="@id/textview_description"
-                android:textSize="32sp"
-                android:textColor="@color/black"
-                />
+        tools:text="Sunday " />
 
-            <TextView
-                android:id="@+id/textview_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/textview_date"
-                app:layout_constraintTop_toBottomOf="@id/textview_temp"
+    <TextView
+        android:id="@+id/textview_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@id/textview_description"
+        app:layout_constraintStart_toStartOf="@id/textview_today"
+        app:layout_constraintTop_toBottomOf="@id/textview_today"
+        tools:text="10/04/2023" />
 
-                tools:text="cleaned cloud " />
+    <TextView
+        android:id="@+id/textview_temp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textview_today"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="44" />
 
+    <TextView
+        android:id="@+id/textview_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textview_date"
+        app:layout_constraintTop_toBottomOf="@id/textview_temp"
+        tools:text="cleaned cloud " />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="@id/textview_temp"
-                app:layout_constraintBottom_toTopOf="@id/textview_temp"
-                android:text="O"
-                android:textSize="22sp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/black"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:text="O"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/textview_temp"
+        app:layout_constraintStart_toEndOf="@id/textview_temp"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-
-
-
-    </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="20dp"
+        android:foregroundGravity="fill"
         app:cardCornerRadius="0.2in"
-        app:layout_constraintTop_toBottomOf="@id/textview_day"
-        android:layout_margin="20dp"
+        app:cardElevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:foregroundGravity="fill"
-        app:cardElevation="8dp"
-        app:layout_constraintBottom_toTopOf="@id/add_clothes"
-        >
+        app:layout_constraintTop_toBottomOf="@id/textview_date"
+        app:layout_constraintVertical_weight="1">
+
         <ImageView
             android:id="@+id/image_clothes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:src="@drawable/summer1"
             android:scaleType="fitXY"
-            />
+            tools:src="@drawable/summer1" />
     </androidx.cardview.widget.CardView>
-    <Button
-        android:id="@+id/add_clothes"
-        android:layout_width="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="20dp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Add Clothes"
-        />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
